--- a/client/src/css/terms.css
+++ b/client/src/css/terms.css
@@ -39,7 +39,7 @@
 .yawn-icon {
   width: 40px;
   height: 40px;
-  animation: turning-head 10s infinite;
+  animation: turning-head 20s 5s infinite;
 }
 @keyframes turning-head {
   0% {
