--- a/client/src/css/navbarDisplay.css
+++ b/client/src/css/navbarDisplay.css
@@ -7,15 +7,16 @@
 
 .pipe-divider {
   margin: 0px 5px;
-  color: #fefefe;
-  font-size: 36px;
+  background-color: #fefefe;
+  width: 1px;
+  height: 28px;
 }
 
 .avatar-image {
-  width: 36px;
-  height: 36px;
+  width: 28px;
+  height: 28px;
   object-fit: cover;
-  clip-path: circle(18px at center);
+  clip-path: circle(14px at center);
   margin: 0px 15px;
 }
 .avatar-link {
