Added search page,search page functionality and results page

--- a/client/src/css/about.css
+++ b/client/src/css/about.css
@@ -2,4 +2,7 @@
   height: 100%;
   width: 90%;
   margin: 0px 0px 0px 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
