--- a/client/src/css/showcase.css
+++ b/client/src/css/showcase.css
@@ -24,9 +24,9 @@
   width: 100%;
   height: auto;
   min-height: 100vh;
-  margin-top: 40px;
+  margin: 40px 0px;
   padding: 10px;
-  background-color: #eeeeee;
+  background-color: #e1e1e1;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
