--- a/client/src/css/workItem.css
+++ b/client/src/css/workItem.css
@@ -1,64 +1,93 @@
 .work-item {
   width: 24%;
   height: 350px;
-  /* overflow: hidden; */
   display: flex;
   flex-direction: column;
 }
-.title-container {
+.flex-container {
   width: 100%;
-  height: 40px;
+  height: 50px;
   background-color: #c4c4c4;
+  color: #606a6c;
   border: 1px solid #fefefe;
   display: flex;
+  font-size: 11pt;
 }
 .title-left {
-  width: 35%;
-  height: 40px;
-  display: flex;
-  /* background-color: lightcyan; */
+  width: 80px;
+  height: 50px;
+  /* display: flex;
+  justify-content: space-evenly;
+  align-items: center; */
+  line-height: 50px;
+  padding-left: 10px;
+  border-right: 1px solid #fefefe;
 }
-.title-left-icon-container {
-  width: 100px;
-  height: 40px;
+.flex-right {
+  width: 65%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
 }
-.title-left-icon {
-  width: 38px;
-  height: 30px;
+.title-right-icon {
+  width: 28px;
+  height: 20px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  margin: 0px 8px;
 }
-.title-left-label {
-  width: auto;
-  text-align: center;
-  line-height: 40px;
-}
-.title-right {
-  width: 65%;
-  line-height: 40px;
-  padding-left: 5px;
-  background-color: lightsalmon;
+.work-image-wrapper {
+  padding: 5px;
+  background-color: #c4c4c4;
+  border: 1px solid #fefefe;
+  border-top: none;
+  border-bottom: none;
 }
 .work-image-container {
   width: 100%;
-  height: 120px;
-  /* display: flex; */
-  /* flex-grow: 0;
-  justify-content: start; */
-
-  /* width: 50%;
-  height: 100%; */
-  /* background-image: url('../images/register-user-img-3-export.jpg'); */
+  height: 160px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
-.work-image {
-  width: 100%;
-  flex-grow: 0;
-  /* height: 10px; */
+.category-left {
+  width: 80px;
+  height: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-right: 1px solid #fefefe;
+}
+.showcase-category-icon-container {
+  display: flex;
+  align-items: center;
+  width: 46px;
+}
+.showcase-category-icon {
+  width: 22px;
+  height: 22px;
+  margin: 0px 8px;
+}
+.creator-left {
+  width: 80px;
+  height: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-right: 1px solid #fefefe;
+}
+.showcase-avatar-image {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  clip-path: circle(15px at center);
+  margin: 0px 8px;
+}
+.creator-right {
+  width: 65%;
+  line-height: 50px;
+  padding-left: 10px;
+}
+#flex-container-creator {
+  border-top: none;
 }
