--- a/client/src/css/registerUser.css
+++ b/client/src/css/registerUser.css
@@ -1,3 +1,11 @@
+.register-user-main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 .register-user-body {
   width: 100%;
   height: 100%;
