--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,3 +1,11 @@
+.login-main-container {
+  width: 100vw;
+  height: 100vh;
+  min-height: 600px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
 .login-body {
   width: 100%;
   height: 100%;
@@ -17,9 +25,11 @@
 }
 .login-image-container {
   height: 100%;
-  width: 75%;
+  width: 65%;
   background-image: url('/images/login-background-image.jpg');
   background-size: cover;
+  /* background-position-y: -20px; */
+  background-repeat: no-repeat;
 }
 .login-headline {
   width: 350px;
