--- a/client/src/css/notFound404.css
+++ b/client/src/css/notFound404.css
@@ -39,8 +39,9 @@
   border-radius: 10px;
   border-style: none;
   background-color: #606a6c;
-  color: #fefefe;
+  /* color: #fefefe; */
+  color: #3b22ac;
   font-size: 14pt;
   cursor: pointer;
-  margin-top: 40px;
+  margin-top: 340px;
 }
