inserted page content

--- a/client/src/css/notFound404.css
+++ b/client/src/css/notFound404.css
@@ -39,9 +39,7 @@
   border-radius: 10px;
   border-style: none;
   background-color: #606a6c;
-  /* color: #fefefe; */
-  color: #3b22ac;
+  color: #fefefe;
   font-size: 14pt;
   cursor: pointer;
-  margin-top: 340px;
 }
