fixed passing through of props, landingpage disabled buttons for logged in users

--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -93,6 +93,10 @@
   border: 1px solid white;
   cursor: pointer;
 }
+
+.logoAnimation-button-deactivated {
+  pointer-events: none;
+}
 @keyframes button-fade-in {
   0% {
     opacity: 0;
