--- a/client/src/css/about.css
+++ b/client/src/css/about.css
@@ -1,3 +1,11 @@
+.about-main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow-x: hidden;
+}
 .about-body {
   height: 100%;
   width: 90%;
