--- a/client/src/css/logoAnimation.css
+++ b/client/src/css/logoAnimation.css
@@ -1,4 +1,4 @@
-.background-absolute {
+.logo-animation-background-absolute {
   width: 100%;
   height: 100%;
   opacity: 0.1;
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100vh;
 }
-.container {
+.logo-animation-container {
   width: 100%;
   height: 100%;
   background: linear-gradient(75deg, #606a6c, #081b1f);
@@ -68,7 +68,7 @@
     transform: translate(-50%, -50%) scale(1) rotate(0deg);
   }
 }
-.button-container {
+.logo-animation-button-container {
   position: absolute;
   top: 0;
   left: 0;
