--- a/client/src/css/notFound404.css
+++ b/client/src/css/notFound404.css
@@ -1,3 +1,12 @@
+.not-found-main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow-x: hidden;
+}
+
 .not-found-body {
   width: 100%;
   height: 100%;
@@ -5,20 +14,20 @@
   display: flex;
   flex-grow: 1;
 }
-.left-side-image-container {
+.not-found-left-side-image-container {
   width: 66.6%;
   height: 100%;
   background-image: url('/images/404-cat.jpg');
   background-size: cover;
 }
-.right-side {
+.not-found-right-side {
   width: 33.3%;
   /* min-width: ; */
   display: flex;
   align-items: center;
 }
 
-.right-side-flex {
+.not-found-right-side-flex {
   width: 100%;
   height: 300px;
 
@@ -33,7 +42,7 @@
   text-align: center;
   line-height: 25px;
 }
-#back-button {
+#not-found-back-button {
   width: 250px;
   height: 40px;
   border-radius: 10px;
