--- a/client/src/css/workItem.css
+++ b/client/src/css/workItem.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 }
-.flex-container {
+.work-item-flex-container {
   width: 100%;
   height: 50px;
   background-color: #c4c4c4;
@@ -13,7 +13,7 @@
   display: flex;
   font-size: 11pt;
 }
-.title-left {
+.work-item-title-left {
   width: 80px;
   height: 50px;
   /* display: flex;
@@ -23,12 +23,12 @@
   padding-left: 10px;
   border-right: 1px solid #fefefe;
 }
-.flex-right {
+.work-item-flex-right {
   width: 65%;
   display: flex;
   align-items: center;
 }
-.title-right-icon {
+.work-item-title-right-icon {
   width: 28px;
   height: 20px;
   background-size: contain;
@@ -50,7 +50,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.category-left {
+.work-item-category-left {
   width: 80px;
   height: 50px;
   display: flex;
@@ -68,7 +68,7 @@
   height: 22px;
   margin: 0px 8px;
 }
-.creator-left {
+.work-item-creator-left {
   width: 80px;
   height: 50px;
   display: flex;
@@ -83,7 +83,7 @@
   clip-path: circle(15px at center);
   margin: 0px 8px;
 }
-.creator-right {
+.work-item-creator-right {
   width: 65%;
   line-height: 50px;
   padding-left: 10px;
