--- a/client/src/css/registerCreative.css
+++ b/client/src/css/registerCreative.css
@@ -2,14 +2,14 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  /* display: flex; */
-  min-height: 760px;
+  display: flex;
   flex-direction: column;
   flex-grow: 1;
 }
 .register-creative-body {
   width: 100%;
   height: 100%;
+  min-height: 800px;
   display: flex;
   flex-grow: 1;
   align-items: center;
