--- a/client/src/css/search.css
+++ b/client/src/css/search.css
@@ -1,4 +1,112 @@
+.search-main-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background: url('/images/search-image.jpg') no-repeat top center fixed;
+  background-size: cover;
+
+  /* background-color: hsl(60, 100%, 90%);
+  background-blend-mode: multiply; */
+}
 .search-body {
+  width: 100vw;
+  height: 100%;
+  margin-top: 60px;
+  flex-grow: 1;
+  overflow: hidden;
+}
+.search-headline-container {
+  background-color: white;
+  padding: 60px 0px;
+}
+.search-headline {
+  padding: 0px 60px;
+  width: 100%;
+  color: #606a6c;
+}
+.search-headline-2 {
+  padding: 0px 60px;
+  width: 100%;
+  color: #606a6c;
+  margin: 10px 0px;
+  font-size: 12pt;
+}
+.search-container {
+  display: flex;
+  flex-grow: 1;
   width: 100%;
   height: 100%;
+  background-color: #eeeeeeaa;
+}
+.body {
+  /* overflow: hidden; */
+}
+.search-container-flex-1 {
+  /* background-color: lightblue; */
+  width: 33.3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.search-container-flex-2 {
+  /* background-color: lightgreen; */
+  width: 33.3%;
+}
+.search-container-flex-3 {
+  /* background-color: lightcoral; */
+  width: 33.3%;
+}
+.search-toggle {
+  width: 70px;
+  height: 70px;
+  background-color: #ffffff00;
+  outline: none;
+}
+.main-toggle-select {
+  background-color: #758184;
+}
+.main-toggle-deselect {
+  background-color: #e1e1e1;
+}
+.search-creatives-toggle-image,
+.search-creations-toggle-image {
+  width: 50px;
+  height: 50px;
+}
+.search-form-container {
+  height: 400px;
+}
+.search-select-label {
+  color: #606a6c;
+  font-size: 14pt;
+  margin: 15px 0px;
+}
+.search-select-main-buttons {
+  width: 170px;
+  margin: 15px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+.search-text-input,
+.search-city-input {
+  width: 300px;
+  height: 25px;
+  border-radius: 5px;
+  padding-left: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #cacaca;
+  color: #707070;
+}
+.search-button {
+  width: 300px;
+  height: 40px;
+  border-radius: 10px;
+  border-style: none;
+  background-color: #606a6c;
+  color: #fefefe;
+  font-size: 14pt;
+  cursor: pointer;
+  margin-top: 40px;
 }
