--- a/client/src/css/search.css
+++ b/client/src/css/search.css
@@ -1,7 +1,7 @@
 .search-main-container {
   width: 100vw;
   height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   flex-grow: 1;
   background: url('/images/search-image.jpg') no-repeat top center fixed;
@@ -33,6 +33,10 @@
   margin: 10px 0px;
   font-size: 12pt;
 }
+.search-h2 {
+  color: #606a6c;
+  margin: 20px 0px;
+}
 .search-container {
   display: flex;
   flex-grow: 1;
@@ -40,23 +44,17 @@
   height: 100%;
   background-color: #eeeeeeaa;
 }
-.body {
-  /* overflow: hidden; */
-}
 .search-container-flex-1 {
-  /* background-color: lightblue; */
-  width: 33.3%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .search-container-flex-2 {
-  /* background-color: lightgreen; */
-  width: 33.3%;
+  width: 35%;
 }
 .search-container-flex-3 {
-  /* background-color: lightcoral; */
-  width: 33.3%;
+  width: 35%;
 }
 .search-toggle {
   width: 70px;
@@ -75,17 +73,14 @@
   width: 50px;
   height: 50px;
 }
-.search-form-container {
-  height: 400px;
-}
 .search-select-label {
   color: #606a6c;
   font-size: 14pt;
-  margin: 15px 0px;
+  margin-top: 20px;
 }
 .search-select-main-buttons {
-  width: 170px;
-  margin: 15px 0px;
+  width: 200px;
+  margin: 100px 0px;
   display: flex;
   justify-content: space-between;
 }
@@ -109,4 +104,96 @@
   font-size: 14pt;
   cursor: pointer;
   margin-top: 40px;
+}
+.creativ-icon-container {
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #0ad82e;
+  box-shadow: 0px 0px 30px 20px #0ad82e;
+}
+.creation-icon-container {
+  cursor: pointer;
+}
+.search-category-container,
+.search-tags-container {
+  width: 400px;
+  height: 200px;
+  padding: 5px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #1019641a;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px 0px #d2d2d2;
+}
+
+.search-category-button-deselect:hover {
+  background-color: #c4d2d6;
+  border: 2px solid #dbdbdb;
+}
+.search-category-radio-button {
+  display: none;
+}
+.search-category-button-deselect {
+  width: 180px;
+  height: 48px;
+  color: #616869;
+  background-color: #c4c4c4;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.search-category-button-select {
+  width: 180px;
+  height: 48px;
+  background-color: #8cadb5;
+  border: 4px solid #fefefe !important;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.search-optional-label {
+  width: 350px;
+  margin-bottom: 20px;
+  font-size: 9pt;
+  color: #a8a8a8;
+}
+.search-tags-container {
+  background-color: #be815317;
+}
+.tag-select {
+  width: 160px;
+  height: 40px;
+  color: #fefefe;
+  background-color: #ffa45e;
+  border: 2px solid #fefefe;
+  border-radius: 40px;
+  outline: none;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+}
+.tag-deselect {
+  width: 160px;
+  height: 40px;
+  color: #f0ecec;
+  background-color: #c4c4c4;
+  border-radius: 40px;
+  outline: none;
+  border: none;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+}
+.tag-deselect:hover {
+  color: #f0fcfc;
+  background-color: #cfcfcf;
+  border: 2px solid #dbdbdb;
 }
