--- a/client/src/css/default.css
+++ b/client/src/css/default.css
@@ -1,10 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300,300i,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Marcellus+SC&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Wire+One&display=swap');
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
+}
+h1 {
+  font-family: 'Open Sans Condensed';
+  font-family: 'Marcellus SC';
+  font-family: 'Poiret One';
+  letter-spacing: 4px;
+  text-align: center;
+  line-height: 50px;
+}
+h2 {
+  font-family: 'Wire One';
+  letter-spacing: 4px;
 }
 body {
   overflow-x: hidden;
