--- a/client/src/css/showcase.css
+++ b/client/src/css/showcase.css
@@ -10,11 +10,11 @@
   min-height: 100vh;
   height: 100%;
   margin-top: 120px;
-  padding: 0px 50px;
 }
 .showcase-headline-container {
   width: 100%;
   color: #606a6c;
+  margin: 0px 50px;
 }
 .headline-showcase {
   width: 100%;
@@ -25,8 +25,8 @@
   /* height: auto; */
   min-height: 100%;
   margin: 40px 0px;
-  padding: 10px;
-  background-color: #e1e1e1;
+  padding: 20px;
+  background-color: #e1e1e166;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -34,4 +34,7 @@
 .work-examples {
   font-size: 12pt;
   margin-top: 10px;
+}
+.work-item {
+  border-radius: 15px;
 }
