--- a/client/src/css/about.css
+++ b/client/src/css/about.css
@@ -1,6 +1,7 @@
 .about-main-container {
   width: 100vw;
-  height: 100vh;
+  height: 800px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -8,9 +9,49 @@
 }
 .about-body {
   height: 100%;
-  width: 90%;
-  margin: 0px 0px 0px 65px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.about-flex-1 {
+  width: 40%;
+  height: 100%;
+  /* min-height: 800px; */
+  padding: 60px 50px 0px 50px;
+  /* margin-bottom: 20px; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.about-header-1-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.about-icon {
+  width: 50px;
+  /* width: auto; */
+  /* height: 50px; */
+  height: auto;
+  background: url('/images/about-icon-dark.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+}
+.about-header-1 {
+  margin-top: 60px;
+}
+.about-header-2 {
+  margin: 20px 0px;
+}
+.about-flex-2 {
+  width: 60%;
+  height: 100%;
+  background-image: url('/images/about-background-image.jpg');
+  background-size: cover;
+}
+.about-paragraph {
+  margin: 10px 0px;
 }
