added more breathing space to page

--- a/client/src/css/contact.css
+++ b/client/src/css/contact.css
@@ -88,4 +88,5 @@
   background-image: url('/images/contact-page-background-image.jpg');
   background-size: cover;
   background-position-y: center;
+  margin-top: 100px;
 }
