--- a/client/src/css/showcase.css
+++ b/client/src/css/showcase.css
@@ -22,9 +22,7 @@
 }
 .showcase-works-container {
   width: 100%;
-  /* height: auto; */
-  min-height: 100%;
-  margin: 40px 0px;
+  margin-top: 40px;
   padding: 20px;
   background-color: #e1e1e166;
   display: flex;
