--- a/client/src/css/results.css
+++ b/client/src/css/results.css
@@ -36,3 +36,19 @@
 .work-item {
   border-radius: 15px;
 }
+.results-button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 60px 0px;
+}
+.results-back-button {
+  width: 250px;
+  height: 40px;
+  border-radius: 10px;
+  border-style: none;
+  background-color: #606a6c;
+  color: #fefefe;
+  font-size: 14pt;
+  cursor: pointer;
+}
