--- a/client/src/css/search.css
+++ b/client/src/css/search.css
@@ -1,10 +1,10 @@
 .search-main-container {
   width: 100vw;
   height: 100vh;
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   flex-grow: 1;
-  background: url('/images/search-image.jpg') no-repeat top center fixed;
+  /* background: url('/images/search-image.jpg') no-repeat top center fixed; */
   background-size: cover;
 
   /* background-color: hsl(60, 100%, 90%);
@@ -19,7 +19,7 @@
 }
 .search-headline-container {
   background-color: white;
-  padding: 60px 0px;
+  padding: 40px 0px;
 }
 .search-headline {
   padding: 0px 60px;
@@ -67,7 +67,7 @@
 }
 .search-container-flex-1 {
   width: 30%;
-  height: 500px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,7 +102,7 @@
 }
 .search-select-main-buttons {
   width: 200px;
-  margin: 100px 0px;
+  margin: 40px 0px;
   display: flex;
   justify-content: space-between;
 }
