--- a/client/src/css/results.css
+++ b/client/src/css/results.css
@@ -18,7 +18,8 @@
 }
 .headline-results {
   width: 100%;
-  text-align: left;
+  display: flex;
+  flex-direction: row;
 }
 .results-works-container {
   width: 100%;
@@ -28,6 +29,20 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+.no-results-works-container {
+  width: 100%;
+  height: 400px;
+  margin-top: 40px;
+  padding: 20px;
+  color: #606a6c;
+  background-color: #e1e1e166;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.no-results-headline {
+  font-size: 1.5em;
 }
 .work-examples {
   font-size: 12pt;
