--- a/client/src/css/results.css
+++ b/client/src/css/results.css
@@ -24,6 +24,7 @@
 .results-works-container {
   width: 100%;
   margin-top: 40px;
+  padding: 0px 20px;
   background-color: #e1e1e166;
   display: flex;
   flex-wrap: wrap;
