--- a/client/src/css/search.css
+++ b/client/src/css/search.css
@@ -124,6 +124,8 @@
   margin-top: 40px;
 }
 .creative-icon-container {
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   border-radius: 50%;
   background-color: #0ad82e;
@@ -131,6 +133,8 @@
 }
 .creation-icon-container {
   cursor: pointer;
+  width: 50px;
+  height: 50px;
 }
 .search-category-container,
 .search-tags-container {
