--- a/client/src/css/notFound404.css
+++ b/client/src/css/notFound404.css
@@ -28,7 +28,7 @@
 
 .not-found-right-side-flex {
   width: 100%;
-  height: 300px;
+  height: 400px;
 
   display: flex;
   flex-direction: column;
@@ -37,9 +37,11 @@
   color: #606a6c;
 }
 .not-found-item {
-  width: 250px;
+  width: 300px;
   text-align: center;
   line-height: 25px;
+  font-size: 14pt;
+  margin-bottom: 30px;
 }
 #not-found-back-button {
   width: 250px;
