changed hover on workItem and highlight on searchPage

--- a/client/src/css/search.css
+++ b/client/src/css/search.css
@@ -128,8 +128,8 @@
   height: 50px;
   cursor: pointer;
   border-radius: 50%;
-  background-color: #0ad82e;
-  box-shadow: 0px 0px 20px 10px #0ad82e;
+  background-color: #749096;
+  box-shadow: 0px 0px 20px 18px #749096;
 }
 .creation-icon-container {
   cursor: pointer;
