--- a/client/src/css/creativeDetail.css
+++ b/client/src/css/creativeDetail.css
@@ -221,3 +221,16 @@ a {
 .creative-detail-contact-headline {
   margin-top: 60px;
 }
+.creative-detail-email-container,
+.creative-detail-website-container {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+.creative-detail-email-icon,
+.creative-detail-website-icon {
+  width: 40px;
+  height: 40px;
+
+  margin-right: 15px;
+}
